version 9.0.1
date: dd/mm/yyyy
  * Implemented support for email verification procedure during the user registration
  * added support for "no language tagged" labels in rendering engine
  * made the rendering of decomp:Component, ontolex:LexicalEntry, ontolex:Form and skosxl:Label of the choice
    of languages for rendering
  * made the LexicographerView only contain outgoing lexico-semantic relationships
  
version 9.0.
date: 17/03/2021
  * added support for internationalization (i18n)
    - added localization (l10n) for italian
  * introduced project facets
  * added project's facets to the global Lucene index (using it for global search)  
  * introduced multiple graph management
  * introduced the lexicographer view for streamlined editing of OntoLex-Lemon lexicons  
  * added support for the Freedcamp collaboration system
  * in the collaboration system it is now possible to remove a resource from an issue
  * most project characteristics can now be modified even after project creation
  * introduced global access in the ACL for a given project, allowing any consumer to access the project content
  * update to MAPLE's remote alignment service API to version 3:
    - possibility to forward credentials for accessing the datasets
  * enable the use of internal federation in the EDOAL data view when both the alignment project and the left
    dataset are hosted on the same Ontotext GraphDB server
  * added two new exception for the converters: ReformattingWrongLexModelException and ReformattingWrongModelException
  * renamed Project#getNewOntologyManager() to Project#getOntologyManager()
  * addded a spreadsheet exporter for SKOS/SKOS-XL projects
  * updated URIGenerators and RenderingEngines to the new extension mechanism (including the use of YAML to 
    persist their configurations/settings)
  * added the possibility to open/close all projects with a single service