@@ -65,6 +65,7 @@ public class UsersRepoHelper {
 	private String BINDING_AFFILIATION = "affiliation";
 	private String BINDING_ADDRESS = "address";
 	private String BINDING_VERIFICATION_TOKEN = "verificationToken";
+	private String BINDING_ACTIVATION_TOKEN = "verificationToken";
 	private String BINDING_REGISTRATION_DATE = "registrationDate";
 	private String BINDING_STATUS = "status";
 	private String BINDING_LANGUAGE_PROFICIENCIES = "languageProficiencies";
@@ -115,6 +116,9 @@ public class UsersRepoHelper {
 		if (user.getVerificationToken() != null) {
 			query += " ?" + BINDING_IRI + " " + NTriplesUtil.toNTriplesString(UserVocabulary.VERIFICATION_TOKEN) + " '" + user.getVerificationToken() + "' .";
 		}
+		if (user.getActivationToken() != null) {
+			query += " ?" + BINDING_IRI + " " + NTriplesUtil.toNTriplesString(UserVocabulary.ACTIVATION_TOKEN) + " '" + user.getActivationToken() + "' .";
+		}
 		for (String lang : user.getLanguageProficiencies()) {
 			query += " ?" + BINDING_IRI + " " + NTriplesUtil.toNTriplesString(UserVocabulary.LANGUAGE_PROFICIENCIES) + 
 					" '" + lang + "' .";
@@ -152,6 +156,7 @@ public class UsersRepoHelper {
 				+ " OPTIONAL { ?" + BINDING_IRI + " " + NTriplesUtil.toNTriplesString(ORG.MEMBER_OF) + " ?" + BINDING_AFFILIATION + " . }"
 				+ " OPTIONAL { ?" + BINDING_IRI + " " + NTriplesUtil.toNTriplesString(UserVocabulary.ADDRESS) + " ?" + BINDING_ADDRESS + " . }"
 				+ " OPTIONAL { ?" + BINDING_IRI + " " + NTriplesUtil.toNTriplesString(UserVocabulary.VERIFICATION_TOKEN) + " ?" + BINDING_VERIFICATION_TOKEN + " . }"
+				+ " OPTIONAL { ?" + BINDING_IRI + " " + NTriplesUtil.toNTriplesString(UserVocabulary.ACTIVATION_TOKEN) + " ?" + BINDING_ACTIVATION_TOKEN + " . }"
 				+ " OPTIONAL { ?" + BINDING_IRI + " " + NTriplesUtil.toNTriplesString(UserVocabulary.LANGUAGE_PROFICIENCIES) 
 					+ " ?" + BINDING_LANGUAGE_PROFICIENCIES + " . }";
 		for (int i = 0; i < UserForm.customFieldsProperties.size(); i++) {
@@ -221,6 +226,9 @@ public class UsersRepoHelper {
 			}
 			if (tuple.getBinding(BINDING_VERIFICATION_TOKEN) != null) {
 				user.setVerificationToken(tuple.getValue(BINDING_VERIFICATION_TOKEN).stringValue());
+			}
+			if (tuple.getBinding(BINDING_ACTIVATION_TOKEN) != null) {
+				user.setActivationToken(tuple.getValue(BINDING_ACTIVATION_TOKEN).stringValue());
 			}
 			
 			String lang = null;
