@@ -33,6 +33,7 @@ public class UserVocabulary {
 	public static final IRI ADDRESS;
 	public static final IRI REGISTRATION_DATE;
 	public static final IRI VERIFICATION_TOKEN;
+	public static final IRI ACTIVATION_TOKEN;
 	public static final IRI STATUS;
 	public static final IRI LANGUAGE_PROFICIENCIES;
 	
@@ -68,6 +69,7 @@ public class UserVocabulary {
     	ADDRESS = fact.createIRI(UserVocabulary.PUVOC_NS, "address");
     	REGISTRATION_DATE = fact.createIRI(UserVocabulary.PUVOC_NS, "registration_date");
 		VERIFICATION_TOKEN = fact.createIRI(UserVocabulary.PUVOC_NS, "verification_token");
+		ACTIVATION_TOKEN = fact.createIRI(UserVocabulary.PUVOC_NS, "activation_token");
     	STATUS = fact.createIRI(UserVocabulary.PUVOC_NS, "status");
     	LANGUAGE_PROFICIENCIES = fact.createIRI(UserVocabulary.PUVOC_NS, "language_proficencies");
     	
