@@ -759,6 +759,7 @@ it.uniroma2.art.semanticturkey.extension.impl.search.regex.RegexSearchStrategyFa
 it.uniroma2.art.semanticturkey.user.EmailAlreadyUsedException.message = E-mail address {0} already used by another user
 it.uniroma2.art.semanticturkey.user.EmailVerificationExpiredException.message = Cannot verify the email address {0}. No unverified account with the given email has been found or the link might be expired
 it.uniroma2.art.semanticturkey.user.IRIAlreadyUsedException.message = IRI {0} already used by another user
+it.uniroma2.art.semanticturkey.user.UserActivationExpiredException.message = Cannot activate user with email address {0}. The user could be already activated or the link might be expired
 it.uniroma2.art.semanticturkey.user.UserNotFoundException.message.with_email = User with email {0} doesn''t exist
 it.uniroma2.art.semanticturkey.user.UserNotFoundException.message.with_iri = User with IRI {0} doesn''t exist
 
