@@ -759,6 +759,7 @@ it.uniroma2.art.semanticturkey.extension.impl.search.regex.RegexSearchStrategyFa
 it.uniroma2.art.semanticturkey.user.EmailAlreadyUsedException.message = Indirizzo e-mail {0} già usato da un altro utente
 it.uniroma2.art.semanticturkey.user.EmailVerificationExpiredException.message = Impossibile verificare l'indirizzo email {0}. Non è stato trovato alcun account non verificato con tale email, o il link potrebbe essere scaduto
 it.uniroma2.art.semanticturkey.user.IRIAlreadyUsedException.message = IRI {0} già usato da un altro utente
+it.uniroma2.art.semanticturkey.user.UserActivationExpiredException.message = Impossibile attivare l'utente con indirizzo email {0}. L'utente potrebbe essere già stato attivato, o il link potrebbe essere scaduto
 it.uniroma2.art.semanticturkey.user.UserNotFoundException.message.with_email = L''utente con email {0} non esiste
 it.uniroma2.art.semanticturkey.user.UserNotFoundException.message.with_iri = L''utente con IRI {0} non esiste
 
