@@ -1,6 +1,7 @@
 version 9.0.1
 date: dd/mm/yyyy
-  * Implemented support for email verification procedure during the user registration
+  * implemented support for email verification during the user registration procedure
+  * allowed administrator to activate a new registered user through a link sent via email
   * added support for "no language tagged" labels in rendering engine
   * made the rendering of decomp:Component, ontolex:LexicalEntry, ontolex:Form and skosxl:Label of the choice
     of languages for rendering
